--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ h1{
   text-align: center;
   padding: 50px;
 }
-div iframe{
-  width: 100%:
-}
 h2{
   display: inline-block;
   font-size: 50px;
+}
+div iframe{
+  width: 100%;
 }
 .a{
   margin-left: 20px;
